2011-01-19  Richard Henderson  <rth@redhat.com>

	* config/mn10300/mn10300.md (mulsi3): Use reg_or_am33_const_operand.
	(*mulsi3): Likewise.

2011-01-19  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu.h (MOVE_RATIO): Return 4 in the !speed case.

2011-01-19  Richard Henderson  <rth@redhat.com>

	* config/mn10300/mn10300.md (addsi3_flags): New.
	(addc_internal, adddi3, adddi3_internal, *adddi3_degenerate): New.
	(subsi3_flags, subc_internal, subdi3): New.
	(subdi3_internal, *subdi3_degenerate): New.
	* config/mn10300/predicates.md (reg_or_am33_const_operand): New.

	* config/mn10300/mn10300.c (mn10300_can_use_retf_insn): New.
	(mn10300_can_use_rets_insn): Rename from mn10300_can_use_return_insn.
	(mn10300_expand_epilogue): Use it.  Compute REG_SAVE_BYTES once.
	* config/mn10300/mn10300-protos.h: Update.
	* config/mn10300/mn10300.md (return): Use mn10300_can_use_retf_insn.
	(return_ret): Likewise.  Rename from return_internal_regs.
	(return_internal): Remove.

	* config/mn10300/mn10300.c (mn10300_unspec_int_label_counter): Remove.
	(mn10300_asm_output_addr_const_extra): Don't handle UNSPEC_INT_LABEL.
	(mn10300_legitimate_constant_p): Likewise.
	(mn10300_can_use_return_insn): Use mn10300_initial_offset.
	(mn10300_frame_size): New.
	(mn10300_expand_prologue): Use it.
	(mn10300_expand_epilogue): Likewise.
	(mn10300_initial_offset): Likewise.
	* config/mn10300/mn10300-protos.h: Update.
	* config/mn10300/mn10300.h (mn10300_unspec_int_label_counter): Remove.
	* config/mn10300/mn10300.md (UNSPEC_INT_LABEL): Remove.
	(prologue, epilogue, return_internal): Tidy output code.
	(mn10300_store_multiple_operation, return): Likewise.
	(int_label, pop_pic_reg, GOTaddr2picreg): Remove.
	(am33_loadPC, mn10300_loadPC, call_next_insn): Remove.
	(add_GOT_to_pic_reg, add_GOT_to_any_reg): Remove.
	(load_pic, am33_load_pic): New.
	(mn10300_load_pic0, mn10300_load_pic1): New.

	* config/mn10300/mn10300-modes.def (CCZN, CCZNC): New modes.